tests/neg-custom-args/qualified-types/predicate_error.scala
def f[A](l: List[A] with l.notEmpty) = () // error
